# cmudict-parser

./: .gitignore  LICENSE  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
cmudict_parser/: ARPAToIPAMapper.py  ARPAToIPAMapper.tests.py  CMUDict.py  CMUDict.tests.py  CMUDictDownloader.py  CMUDictParser.py  SentenceToIPA.py  SentenceToIPA.tests.py  __init__.py  playground2.py
src/: ARPAToIPAMapper.tests.py  CMUDict.py  CMUDictDownloader.py
src/cmudict_parser/: ARPAToIPAMapper.py  ARPAToIPAMapper.tests.py  CMUDict.py  CMUDict.tests.py  CMUDictParser.py  SentenceToIPA.py  SentenceToIPA.tests.py  __init__.py
