[metadata]
name = cmudict_parser
version = 1.0.1
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Python parser for CMUDict files. It returns ARBAbet and IPA transciption of dictionary words."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/cmudict-parser.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.8

[options.packages.find]
where =